fixed the aboutskill alignment

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -88,7 +88,7 @@
     }
 
     .about__skill {
-        justify-content: center;
+        justify-content: left;
         align-items: center;
     }
 
